components/ux-github-actions/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: ux-github-actions
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: ux-github-actions
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elux-github-actions
  namespace: ux-github-actions
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-ux-github-actions
    weight: null
status: {}
